--- a/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,44 @@
-<div class='main-nav'>
+<div class="wrapper">
+  <!-- Sidebar -->
+  <nav id="sidebar" class="navbar-default bg-light">
+    <ul class="list-unstyled components">
+      <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+        <a [routerLink]='["/"]' (click)='collapse()'>
+          <span class='glyphicon glyphicon-home'></span> Customer Dashboard
+        </a>
+      </li>
+      <li [routerLinkActive]='["link-active"]'>
+        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+          <span class='glyphicon glyphicon-th-list'></span> Eaton Planning Dashboard
+        </a>
+      </li>
+      <li [routerLinkActive]='["link-active"]'>
+        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+          <span class='glyphicon glyphicon-th-list'></span> Eaton Manufacturing Dashboard
+        </a>
+      </li>
+      <li [routerLinkActive]='["link-active"]'>
+        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+          <span class='glyphicon glyphicon-th-list'></span> Eaton Services Dashboard
+        </a>
+      </li>
+      <li [routerLinkActive]='["link-active"]'>
+        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+          <span class='glyphicon glyphicon-th-list'></span> Eaton Analytics Dashboard
+        </a>
+      </li>
+      <!--<li [routerLinkActive]='["link-active"]'>
+        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+          <span class='glyphicon glyphicon-th-list'></span> Fetch data
+        </a>
+      </li>-->
+    </ul>
+  </nav>
+
+</div>
+
+
+<!--<div class='main-nav'>
     <div class='navbar navbar-inverse'>
         <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded' (click)='toggle()'>
@@ -7,27 +47,42 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]='["/"]'>BlockchainETN</a>
+            <a class='navbar-brand' [routerLink]='["/"]'>Blockchain</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a [routerLink]='["/"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/counter"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
-                    </a>
-                </li>
-            </ul>
+          <ul class='nav navbar-nav'>
+            <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+              <a [routerLink]='["/"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-home'></span> Customer Dashboard
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Eaton Planning Dashboard
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Eaton Manufacturing Dashboard
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Eaton Services Dashboard
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Eaton Analytics Dashboard
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Fetch data
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
-</div>
+</div>-->
