--- a/BlockchainETN/ClientApp/src/app/home/home.component.html
+++ b/BlockchainETN/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,2 @@
 <h1>Click to begin your order...</h1>
-<input id="begin" value="Begin Order" type="button" [routerLink]='["/configure-item"]'/>
+<input id="begin" class="btn btn-primary" value="Begin Order" type="button" [routerLink]='["/configure-item"]'/>
