--- a/BlockchainETN/ClientApp/src/app/configure-item/configure-item.component.html
+++ b/BlockchainETN/ClientApp/src/app/configure-item/configure-item.component.html
@@ -253,11 +253,11 @@
                     </div>
                     <div class="col-sm-6">
                       <label for="warranty">Warranty -</label>
-                      <span name="warranty">{{OrderWarranty.Name}}</span>
+                      <span name="warranty">{{OrderWarranty.name}}</span>
                     </div>
                     <div class="col-sm-6">
                       <label for="batteries">Batteries -</label>
-                      <span name="batteries">{{OrderBattery.Name}}</span>
+                      <span name="batteries">{{OrderBattery.name}}</span>
                     </div>
                     <div class="col-sm-6">
                       <label for="networkcard">Network Card -</label>
