--- a/BlockchainETN/ClientApp/src/app/home/home.component.html
+++ b/BlockchainETN/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,32 @@
-<h1>Click to begin your order...</h1>
-<input id="begin" class="btn btn-primary" value="Begin Order" type="button" [routerLink]='["/configure-item"]'/>
+
+  <div class="card-body">
+    <div class="row mb-2">
+      <form class="card col-5">
+        <div class="card-header mb-1" id="heading">
+          <h5 class="">
+            Customer Information
+          </h5>
+        </div>
+        <div class="form-row">
+
+          <div class="col-sm-3">
+            <label class="col-form-label float-right" for="name">Customer Name</label>
+          </div>
+          <input type="text" class="form-control col-sm-9 mb-1" name="name" id="name" [(ngModel)]="Customer.Name" />
+
+          <div class="col-sm-3">
+            <label class="col-form-label float-right" for="Phone">Phone</label>
+          </div>
+          <input type="text" class="form-control col-sm-9 mb-1" name="Phone" id="Phone" [(ngModel)]="Customer.Phone" />
+
+          <div class="col-sm-3">
+            <label class="col-form-label float-right" for="Email">Email</label>
+          </div>
+          <input type="text" class="form-control col-sm-9 mb-1" name="Email" id="Email" [(ngModel)]="Customer.Email" />
+
+        </div>
+      </form>
+    </div>
+  </div>
+
+<input id="begin" class="btn btn-primary" value="Begin Order" type="button" [routerLink]='["/configure-item"]' />
